unpackaged/main/default/objects/Test_Case__c/Test_Case__c.object-meta.xml
<CustomObject>
    <description>A UAT test case DEFINITION — the authored steps, descriptions and expected results, written once and reused across every cycle. What actually happened on a specific run lives on Test Execution, never here. Deliberately carries no automation-tracking fields (deferred phase).</description>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>