unpackaged/main/default/objects/Test_Case__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Admin who authored this case definition.</description>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Authored Test Cases</relationshipLabel>
    <relationshipName>Authored_Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>