unpackaged/main/default/objects/Test_Case__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>Human-readable case identifier: system-module_group-module-version-sequence (e.g. helios-client_management-households-v1.0-1001). Recomputes if taxonomy names change.</description>
    <formula>LOWER(Module__r.Module_Group__r.System__r.System_Code__c) &amp; &quot;-&quot; &amp;
LOWER(SUBSTITUTE(Module__r.Module_Group__r.Name, &quot; &quot;, &quot;_&quot;)) &amp; &quot;-&quot; &amp;
LOWER(SUBSTITUTE(Module__r.Name, &quot; &quot;, &quot;_&quot;)) &amp; &quot;-&quot; &amp;
LOWER(Version__c) &amp; &quot;-&quot; &amp;
TEXT(Sequence__c)</formula>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>