unpackaged/main/default/objects/Test_Case__c/fields/Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>Creation_Status__c</fullName>
    <description>Authoring progress of the definition itself (not of any run). Retired hides the case from book/cycle add-pickers (they require Complete) without touching where it already is or its run history.</description>
    <label>Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>