unpackaged/main/default/objects/Test_Case__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Tester-facing one-to-two sentence summary of what this case verifies — the card blurb on the dashboard and pool. The steps carry the detail; blank is fine and cards simply omit it.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>