unpackaged/main/default/objects/Test_Case__c/fields/Estimated_Effort__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort__c</fullName>
    <description>Rough size of a single run, for pool browsing (three buckets on purpose — minutes would be false precision for UAT scripts).</description>
    <label>Estimated Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>