unpackaged/main/default/objects/Test_Case__c/fields/Max_Testers_Override__c.field-meta.xml
<CustomField>
    <fullName>Max_Testers_Override__c</fullName>
    <description>Per-case seat count, overriding the cycle default wherever this case runs (blank = inherit Test_Cycle__c.Max_Testers__c). Definition-level by design: capacity need is intrinsic to the case, and there is no per-(cycle, case) row to hang it on.</description>
    <label>Max Testers Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>