unpackaged/main/default/objects/Test_Case__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Taxonomy home of this case. Restricted delete: a module with cases under it cannot be deleted.</description>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>