unpackaged/main/default/objects/Test_Case__c/fields/Pre_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Conditions__c</fullName>
    <description>Setup the tester must have in place before starting this case — data, permissions, environment state. Shown as its own panel in the runner; blank hides the panel.</description>
    <label>Pre-Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>