unpackaged/main/default/objects/Test_Case__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Per-module sequence number (seeded at 1001, then max + 1), set by the Test_Case_Before_Save_Set_Sequence flow when blank. Final segment of the Case ID.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>