unpackaged/main/default/objects/Test_Case__c/fields/Target_Book__c.field-meta.xml
<CustomField>
    <fullName>Target_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deferred book membership. Holds the book this case should join while it is still being authored; when Creation Status flips to Complete the case is appended to the book (Test_Book_Item__c) and this field is cleared. Admin-only — never rendered on tester surfaces.</description>
    <label>Add to Book When Complete</label>
    <referenceTo>Test_Book__c</referenceTo>
    <relationshipLabel>Pending Cases</relationshipLabel>
    <relationshipName>Pending_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>