unpackaged/main/default/objects/Test_Case__c/fields/Testing_Surface__c.field-meta.xml
<CustomField>
    <fullName>Testing_Surface__c</fullName>
    <description>Where this case is executed.</description>
    <label>Testing Surface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lightning App (Internal)</fullName>
            </value>
            <value>
                <fullName>Client Portal / Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Integration / API Layer</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>