unpackaged/main/default/objects/Test_Case__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Human-readable case title shown as the headline everywhere this case appears (dashboards, queue, pool). Case_ID__c is the identifier, not a title. Blank falls back to displaying Case_ID__c.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>