unpackaged/main/default/objects/Test_Case__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version segment of the Case ID (e.g. &quot;v1.0&quot;). Required — a blank version would corrupt the Case ID.</description>
    <label>Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>