unpackaged/main/default/objects/Test_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_ID__c</columns>
    <columns>Module__c</columns>
    <columns>Creation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>